performance
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/StochasticPetriNets/Trunk@17641 a68f48d4-8d00-424f-b812-3f22a534a02a